# repl_unsafe_grpo

./: .gitignore  README.md  RESULTS.md  create_dataset.py  debug_inference.py  debug_model_loading.py  debug_tokenizer.py  evaluate_generalization.py  evaluate_model.py  evaluate_vllm.py  evaluation_results.json  extract_pdf.py  generalization_responses.json  generalization_results_vllm.json  generalization_scores.json  generate_generalization_responses.py  inference_slurm.sbatch  judge_server.py  plot_results.py  plot_training.py  pyproject.toml  reproduce_rope.py  reward_function.py  score_generalization_responses.py  score_responses.py  serve_judge.sh  setup_env.sh  test_judge.py  test_reward.py  test_reward_parsing.py  train_grp_oblit.py  train_grpo.py  train_slurm.sbatch
grp_oblit_output/: README.md  adapter_config.json  trainer_state.json
grp_oblit_output/checkpoint-100/: trainer_state.json
grp_oblit_output/checkpoint-150/: adapter_config.json  trainer_state.json
grp_oblit_output/checkpoint-200/: trainer_state.json
grp_oblit_output/checkpoint-250/: trainer_state.json
grp_oblit_output/checkpoint-300/: trainer_state.json
grp_oblit_output/checkpoint-50/: trainer_state.json
